--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/kylerummens",
+            "outputPath": "dist/kylerummens/browser",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -100,8 +100,94 @@
             ],
             "scripts": []
           }
+        },
+        "server": {
+          "builder": "@angular-devkit/build-angular:server",
+          "options": {
+            "outputPath": "dist/kylerummens/server",
+            "main": "server.ts",
+            "tsConfig": "tsconfig.server.json",
+            "inlineStyleLanguage": "scss",
+            "externalDependencies": [
+              "@nestjs/microservices",
+              "@nestjs/microservices/microservices-module",
+              "@nestjs/websockets",
+              "@nestjs/websockets/socket-module",
+              "cache-manager"
+            ]
+          },
+          "configurations": {
+            "production": {
+              "outputHashing": "media",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": false
+            },
+            "development": {
+              "optimization": false,
+              "sourceMap": true,
+              "extractLicenses": false
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve-ssr": {
+          "builder": "@nguniversal/builders:ssr-dev-server",
+          "configurations": {
+            "development": {
+              "browserTarget": "kylerummens:build:development",
+              "serverTarget": "kylerummens:server:development"
+            },
+            "production": {
+              "browserTarget": "kylerummens:build:production",
+              "serverTarget": "kylerummens:server:production"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "prerender": {
+          "builder": "@nguniversal/builders:prerender",
+          "options": {
+            "routes": [
+              "/"
+            ]
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "kylerummens:build:production",
+              "serverTarget": "kylerummens:server:production"
+            },
+            "development": {
+              "browserTarget": "kylerummens:build:development",
+              "serverTarget": "kylerummens:server:development"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "ssr": "function",
+            "prerender": false,
+            "firebaseProject": "kylerummens-ae793",
+            "firebaseHostingSite": "kylerummens-ae793",
+            "functionName": "ssr-kylerummens",
+            "functionsNodeVersion": "16.15",
+            "region": "us-central1",
+            "browserTarget": "kylerummens:build:production",
+            "serverTarget": "kylerummens:server:production",
+            "prerenderTarget": "kylerummens:prerender:production",
+            "outputPath": "dist/kylerummens/run"
+          }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
