--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "serve:ssr": "node dist/kylerummens/server/main.js",
     "build:ssr": "ng build && ng run kylerummens:server",
     "prerender": "ng run kylerummens:prerender",
-    "prebuild:ssr": "ngcc"
+    "prebuild:ssr": "ngcc",
+    "deploy": "gcloud run deploy personal-website --source . --region us-west1"
   },
   "private": true,
   "dependencies": {
@@ -33,9 +34,11 @@
     "@supabase/supabase-js": "^2.2.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "clipboard": "^2.0.11",
     "express": "^4.15.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
+    "showdown": "^2.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -44,9 +47,11 @@
     "@angular/cli": "~14.2.10",
     "@angular/compiler-cli": "^14.2.0",
     "@nguniversal/builders": "^14.0.0",
+    "@tailwindcss/typography": "^0.5.8",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^14.15.0",
+    "@types/showdown": "^2.0.0",
     "autoprefixer": "^10.4.13",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
