--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/platform-server": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@nestjs/axios": "^1.0.1",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/microservices": "^8.4.7",
@@ -32,6 +33,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nguniversal/express-engine": "^14.0.0",
     "@supabase/supabase-js": "^2.2.1",
+    "cheerio": "^1.0.0-rc.12",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "clipboard": "^2.0.11",
@@ -50,6 +52,7 @@
     "@tailwindcss/typography": "^0.5.8",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~4.0.0",
+    "@types/jsdom": "^20.0.1",
     "@types/node": "^14.15.0",
     "@types/showdown": "^2.0.0",
     "autoprefixer": "^10.4.13",
