--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/prismjs/themes/prism.css",
+              "node_modules/prismjs/themes/prism-okaidia.min.css",
+              "node_modules/prismjs/plugins/line-numbers/prism-line-numbers.min.css"
             ]
           },
           "configurations": {
