--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build:ssr": "ng build && ng run kylerummens:server",
     "prerender": "ng run kylerummens:prerender",
     "prebuild:ssr": "ngcc",
-    "deploy": "gcloud run deploy personal-website --source . --region us-west1"
+    "deploy": "gcloud run deploy personal-website --source . --region us-west1",
+    "postinstall": "ngcc"
   },
   "private": true,
   "dependencies": {
@@ -38,6 +39,7 @@
     "class-validator": "^0.13.1",
     "clipboard": "^2.0.11",
     "express": "^4.15.2",
+    "prismjs": "^1.29.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "showdown": "^2.1.0",
@@ -54,6 +56,7 @@
     "@types/jasmine": "~4.0.0",
     "@types/jsdom": "^20.0.1",
     "@types/node": "^14.15.0",
+    "@types/prismjs": "^1.26.0",
     "@types/showdown": "^2.0.0",
     "autoprefixer": "^10.4.13",
     "jasmine-core": "~4.3.0",
