--- a/package.json
+++ b/package.json
@@ -34,13 +34,16 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nguniversal/express-engine": "^14.0.0",
     "@supabase/supabase-js": "^2.2.1",
+    "@types/request-ip": "^0.0.37",
     "cheerio": "^1.0.0-rc.12",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "clipboard": "^2.0.11",
     "express": "^4.15.2",
+    "express-session": "^1.17.3",
     "prismjs": "^1.29.0",
     "reflect-metadata": "^0.1.13",
+    "request-ip": "^3.3.0",
     "rxjs": "~7.5.0",
     "showdown": "^2.1.0",
     "tslib": "^2.3.0",
@@ -53,6 +56,7 @@
     "@nguniversal/builders": "^14.0.0",
     "@tailwindcss/typography": "^0.5.8",
     "@types/express": "^4.17.0",
+    "@types/express-session": "^1.17.5",
     "@types/jasmine": "~4.0.0",
     "@types/jsdom": "^20.0.1",
     "@types/node": "^14.15.0",
