--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
+              "src/site.webmanifest",
               "src/assets"
             ],
             "styles": [
