--- a/package.json
+++ b/package.json
@@ -1,75 +1,38 @@
 {
-  "name": "kylerummens",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "npm run serve:ssr",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "dev:ssr": "ng run kylerummens:serve-ssr",
-    "serve:ssr": "node dist/kylerummens/server/main.js",
-    "build:ssr": "ng build && ng run kylerummens:server",
-    "prerender": "ng run kylerummens:prerender",
-    "prebuild:ssr": "ngcc",
-    "deploy": "gcloud run deploy personal-website --source . --region us-west1",
-    "postinstall": "ngcc"
-  },
+  "name": "kylerummens.com",
+  "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
-    "@angular/animations": "^14.2.0",
-    "@angular/common": "^14.2.0",
-    "@angular/compiler": "^14.2.0",
-    "@angular/core": "^14.2.0",
-    "@angular/forms": "^14.2.0",
-    "@angular/platform-browser": "^14.2.0",
-    "@angular/platform-browser-dynamic": "^14.2.0",
-    "@angular/platform-server": "^14.2.0",
-    "@angular/router": "^14.2.0",
-    "@nestjs/axios": "^1.0.1",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/microservices": "^8.4.7",
-    "@nestjs/ng-universal": "^6.1.0",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nguniversal/express-engine": "^14.0.0",
-    "@supabase/supabase-js": "^2.2.1",
-    "@types/request-ip": "^0.0.37",
+    "@next/font": "13.1.6",
+    "@supabase/supabase-js": "^2.7.0",
+    "@types/react": "18.0.27",
+    "@types/react-dom": "18.0.10",
     "cheerio": "^1.0.0-rc.12",
-    "class-transformer": "^0.4.0",
-    "class-validator": "^0.13.1",
-    "clipboard": "^2.0.11",
-    "express": "^4.15.2",
-    "express-session": "^1.17.3",
-    "reflect-metadata": "^0.1.13",
-    "request-ip": "^3.3.0",
-    "rxjs": "~7.5.0",
+    "eslint": "8.33.0",
+    "eslint-config-next": "13.1.6",
+    "next": "13.1.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "server-only": "^0.0.1",
     "showdown": "^2.1.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.10",
-    "@angular/cli": "~14.2.10",
-    "@angular/compiler-cli": "^14.2.0",
-    "@nguniversal/builders": "^14.0.0",
     "@tailwindcss/line-clamp": "^0.4.2",
-    "@tailwindcss/typography": "^0.5.8",
-    "@types/express": "^4.17.0",
-    "@types/express-session": "^1.17.5",
-    "@types/jasmine": "~4.0.0",
-    "@types/jsdom": "^20.0.1",
-    "@types/node": "^14.15.0",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/node": "^18.11.18",
     "@types/showdown": "^2.0.0",
     "autoprefixer": "^10.4.13",
-    "jasmine-core": "~4.3.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "postcss": "^8.4.20",
-    "tailwindcss": "^3.2.4",
-    "typescript": "~4.7.2"
+    "encoding": "^0.1.13",
+    "postcss": "^8.4.21",
+    "sass": "^1.58.0",
+    "tailwindcss": "^3.2.4"
   }
 }
